Day 4 code fixes